{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 118,
  "lineage": "4c846acf-8658-38e9-153b-6d24f4d3cb73",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "lb_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/team3terraformproject/zones/us-east1-c/instanceGroups/group-manager",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-06-17T15:36:05.582-07:00",
            "enable_cdn": false,
            "fingerprint": "MLyP9gQ0uS0=",
            "generated_id": 2435845315834907578,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/team3terraformproject/global/httpHealthChecks/team3-health-check"
            ],
            "id": "projects/team3terraformproject/global/backendServices/team3-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "team3-backend-service",
            "port_name": "http",
            "project": "team3terraformproject",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/team3terraformproject/global/backendServices/team3-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_http_health_check.lb_health_check",
            "google_compute_instance_group_manager.gmanager",
            "google_compute_instance_template.team3-template",
            "google_compute_network.globalvpc",
            "google_compute_target_pool.default-target"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-06-17T15:35:31.129-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/team3terraformproject/global/firewalls/http-fw",
            "log_config": [],
            "name": "http-fw",
            "network": "https://www.googleapis.com/compute/v1/projects/team3terraformproject/global/networks/team3-vpc",
            "priority": 1000,
            "project": "team3terraformproject",
            "self_link": "https://www.googleapis.com/compute/v1/projects/team3terraformproject/global/firewalls/http-fw",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "http-server"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.globalvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "globalvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/team3terraformproject/global/networks/team3-vpc",
            "mtu": 0,
            "name": "team3-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "team3terraformproject",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/team3terraformproject/global/networks/team3-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "lb_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-17T15:36:26.775-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/team3terraformproject/global/backendServices/team3-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "jOv5XNWlUKQ=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/team3terraformproject/global/urlMaps/team3-url-map",
            "map_id": 2699668492355079045,
            "name": "team3-url-map",
            "path_matcher": [],
            "project": "team3terraformproject",
            "self_link": "https://www.googleapis.com/compute/v1/projects/team3terraformproject/global/urlMaps/team3-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.lb_backend",
            "google_compute_http_health_check.lb_health_check",
            "google_compute_instance_group_manager.gmanager",
            "google_compute_instance_template.team3-template",
            "google_compute_network.globalvpc",
            "google_compute_target_pool.default-target"
          ]
        }
      ]
    }
  ]
}